Создает общие файлы

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,5 +4,7 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './utils/mixin.scss';
+@import './components/container.scss';
 @import './example';
 @import './site-header';
