--- a/src/sass/utils/_mixin.scss
+++ b/src/sass/utils/_mixin.scss
@@ -6,8 +6,8 @@
 @mixin mq($range) {
   $mobile: 320px;
   $tablet: 768px;
-  $desktop: 960px;
-  $hd: 1140px;
+  $desktop: 1024px;
+  $hd: 1920px;
 
   @if $range == mobile-only {
     @media (max-width: #{$tablet - 0.02} ) {
@@ -29,8 +29,8 @@
     @media (min-width: $desktop) {
       @content;
     }
-  } @else if $range == not-desktop {
-    @media (max-width: #{$desktop - 0.02}) {
+  } @else if $range == desktop-only {
+    @media (min-width: $desktop) and (max-width: #{$hd - 0.02}) {
       @content;
     }
   } @else if $range == hd {
